# EcoPaste-Pro

./: .gitignore  Cargo.toml  README.en-US.md  README.ja-JP.md  README.md  README.zh-TW.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  temp_webdav_global.scss  temp_webdav_index.tsx  vite.config.ts
.github/workflows/: build-on-sync.yml  release.yml  sync-upstream.yml
docs/Android/: README.md  To_EcoPaste.prf.xml  To_Phone.prf.xml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/core/: mod.rs  shortcut_hook.rs  (+1 more)
src-tauri/src/plugins/transfer/: Cargo.toml  build.rs
src-tauri/src/plugins/transfer/permissions/: default.toml
src-tauri/src/plugins/transfer/src/: commands.rs  contract.rs  credentials.rs  image_strategy.rs  lib.rs  network.rs  processor.rs  push_provider.rs  receiver.rs  sync_manager.rs  temp_image.rs  text_subtype.rs
src-tauri/src/plugins/transfer/src/channels/: bark.rs  mod.rs  webhook.rs
src-tauri/src/plugins/window/: Cargo.toml  build.rs
src-tauri/src/plugins/window/permissions/: default.toml
src-tauri/src/plugins/window/src/: lib.rs
src-tauri/src/plugins/window/src/commands/: macos.rs  mod.rs  not_macos.rs
src/constants/: contentTypes.ts  index.ts
src/database/: history.ts  index.ts
src/hooks/: useClipboard.ts  useContextMenu.ts  useHistoryList.ts  useRegister.ts
src/locales/: en-US.json  ja-JP.json  zh-CN.json  zh-TW.json
src/plugins/: clipboard.ts  window.ts
src/stores/: clipboard.ts  global.ts  network.ts  transfer.ts
src/types/: database.d.ts  store.d.ts
src/utils/: autoBackupScheduler.ts  color.ts  is.ts  isCode.ts  object.ts  path.ts  preload.ts  store.ts  transferFingerprint.ts  transferPushItem.ts  webdavBackup.ts  winPaths.ts
(+49 files in other folders)
