[package]
name = "tauri-plugin-eco-window"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-window"

[dependencies]
tauri.workspace = true
serde.workspace = true

[build-dependencies]
tauri-plugin.workspace = true

[target."cfg(target_os = \"macos\")".dependencies]
tauri-nspanel.workspace = true

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi"] }
